--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://quockhanh:rsKATtkZNHdPueJF@cluster0.fhozqza.mongodb.net/Tung?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://minhtung:minhtung123@cluster0.m01vcti.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 GITHUB_ID=b855871076f9d9c22322
